--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www"
+    "start": "node ./backend/bin/www",
+    "devstart": "nodemon ./backend/bin/www",
+    "client": "cd frontend && npm run dev",
+    "dev": "concurrently \" npm run devstart\" \"npm run client \""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
