--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goalsetter",
   "version": "0.0.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "node ./backend/bin/www",
     "devstart": "nodemon ./backend/bin/www",
